--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='styles.css')}}"
+    />
 
     <title>Falsk App</title>
   </head>
   <body>
     <h1>Welcome to My App</h1>
-    <p>This is a simple Flask application.</p>
-    <p>Current time: {{ current_time }}</p>
+    <div class="content">
+      <h1>Task smash</h1>
+
+      <table>
+        <tr>
+          <th>Task</th>
+          <th>Added</th>
+          <th>Completed</th>
+          <th>Actions</th>
+        </tr>
+        <tr>
+          <td>Task 1</td>
+          <td>2023-10-01</td>
+          <td>No</td>
+          <td>
+            <button class="btn">Complete</button>
+            <button class="btn-delete">Delete</button>
+          </td>
+        </tr>
+      </table>
+      <form action="">
+        <input
+          type="text"
+          name="task"
+          placeholder="Enter a new task"
+          required
+        />
+        <button type="submit" class="btn">Add Task</button>
+      </form>
+    </div>
   </body>
 </html>
